style how it works section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/style.css" />
+
     <title>Omnifood</title>
   </head>
   <body>
@@ -75,7 +77,7 @@
           </h2>
         </div>
 
-        <div class="container grid grid--2-cols">
+        <div class="container grid grid--2-cols grid--center-v">
           <!-- STEP 01 -->
           <div class="step-text-box">
             <p class="step-number">01</p>
@@ -89,7 +91,7 @@
               matter what diet you follow!
             </p>
           </div>
-          <div class="step-image-box">
+          <div class="step-img-box">
             <img
               src="img/app/app-screen-1.png"
               class="step-img"
@@ -99,7 +101,7 @@
 
           <!-- STEP 02 -->
 
-          <div class="step-image-box">
+          <div class="step-img-box">
             <img
               src="img/app/app-screen-2.png"
               class="step-img"
@@ -127,7 +129,7 @@
               change delivery schedule and address daily!
             </p>
           </div>
-          <div class="step-image-box">
+          <div class="step-img-box">
             <img
               src="img/app/app-screen-3.png"
               class="step-img"
