--- a/index.html
+++ b/index.html
@@ -157,6 +157,26 @@
           </div>
         </div>
       </section>
+      <section class="section-meals">
+        <div class="container">
+          <span class="subheading">Meals</span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+
+        <div class="container grid grid--3-cols">
+          <div class="meal">
+            <img
+              src="img/meals/meal-1.jpg"
+              class="meal-img"
+              alt="Japanese Gyozas"
+            />
+          </div>
+          <div class="meal">Meal</div>
+          <div class="list">List of diets</div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
