--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container grid grid--5-cols">
+      <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img class="logo" src="img/omnifood-logo.png" alt="Omnifood Logo" />
@@ -589,11 +589,15 @@
         <div class="address-col">
           <p class="footer-heading">Contact us</p>
           <address class="contacts">
-            <p>623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p class="address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
             <p>
-              <a href="tel:415-201-6370">415-201-6370</a>
+              <a class="footer-link" href="tel:415-201-6370">415-201-6370</a>
               <br />
-              <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+              <a class="footer-link" href="mailto:hello@omnifood.com"
+                >hello@omnifood.com</a
+              >
             </p>
           </address>
         </div>
