--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img class="logo" src="img/omnifood-logo.png" alt="Omnifood Logo" />
       </a>
@@ -118,6 +118,7 @@
               matter what diet you follow!
             </p>
           </div>
+
           <div class="step-img-box">
             <img
               src="img/app/app-screen-1.png"
