--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
         </div>
       </section>
 
-      <section class="section-cta" id="cta">
+      <section class="section-cta" id="cta" name="sign-up" netlify>
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -547,6 +547,7 @@
                     type="text"
                     placeholder="John Doe"
                     required
+                    name="full-name"
                   />
                 </div>
 
@@ -556,13 +557,14 @@
                     id="email"
                     type="email"
                     placeholder="me@example.com"
+                    name="email"
                     required
                   />
                 </div>
 
                 <div>
                   <label for="select-where">Where did you hear from us</label>
-                  <select id="select-where" required>
+                  <select id="select-where" name="select-where" required>
                     <option value="">Please choose one option</option>
                     <option value="friends">Friends and Family</option>
                     <option value="youtube">YouTube Video</option>
