enable netlify forms

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
         </div>
       </section>
 
-      <section class="section-cta" id="cta" name="sign-up" netlify>
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -539,7 +539,7 @@
                 first meal is on us!
               </p>
 
-              <form class="cta-form" action="#">
+              <form class="cta-form" name="sign-up" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
